--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Green Earth</title>
   <link rel="stylesheet" href="style.css">
+  
+
 </head>
 <body>
   <!-- Navbar -->
@@ -57,21 +59,28 @@
 
 
   <!-- About Campaign -->
-  <section class="about">
-    <img src="tree.jpg" alt="Tree">
-    <div>
-      <h2>About the Campaign</h2>
+<section class="about-campaign">
+  <h2 class="about-title">About the Campaign</h2>
+  <div class="about-container">
+    <div class="about-image">
+      <img src="about.png" alt="Green Plant">
+    </div>
+    <div class="about-text">
       <p>
-        Green Earth is a global tree plantation initiative dedicated to fighting deforestation and climate change. 
-        Our mission is to restore balance, create habitats, and inspire collective action worldwide.
+        Green Earth is a global tree plantation initiative dedicated to fighting climate change. 
+        Since our start, we've planted over 500,000 trees worldwide. By joining our campaign, 
+        you help restore forests, create habitats for wildlife, and combat global warming.
       </p>
       <ul>
-        <li>Reforestation of rural areas</li>
+        <li>Restoration of natural habitats</li>
+        <li>Improvement of air quality</li>
         <li>Support for local communities</li>
-        <li>Global climate awareness</li>
       </ul>
     </div>
-  </section>
+  </div>
+</section>
+
+
 
   <!-- Our Impact -->
   <section class="impact">
@@ -110,5 +119,7 @@
   </footer>
 
   <script src="script.js"></script>
+  
+
 </body>
 </html>
