--- a/index.html
+++ b/index.html
@@ -82,21 +82,26 @@
 
 
 
+  
   <!-- Our Impact -->
-  <section class="impact">
-    <div>
+<section class="impact">
+  <h2 class="impact-title">Our Impact</h2>
+  <div class="impact-cards">
+    <div class="impact-card">
       <h3>500K+</h3>
       <p>Trees Planted</p>
     </div>
-    <div>
+    <div class="impact-card">
       <h3>120+</h3>
       <p>Communities Involved</p>
     </div>
-    <div>
+    <div class="impact-card">
       <h3>30+</h3>
       <p>Countries Reached</p>
     </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- Plant a Tree Form -->
   <section class="donate">
