--- a/index.html
+++ b/index.html
@@ -103,8 +103,11 @@
 </section>
 
 
-  <!-- Plant a Tree Form -->
-  <section class="donate">
+ 
+<!-- Donate Section -->
+<section class="donate">
+  <h2 class="donate-title">Plant a Tree Today</h2>
+  <div class="donate-box">
     <form id="donation-form">
       <input type="text" placeholder="Your Name" required>
       <input type="email" placeholder="Your Email Address" required>
@@ -116,12 +119,14 @@
       </select>
       <button type="submit" class="btn-yellow">Donate Now</button>
     </form>
-  </section>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Green Earth. All Rights Reserved.</p>
-  </footer>
+<!-- Footer -->
+<footer>
+  <p>© 2025 Green Earth. All Rights Reserved.</p>
+</footer>
+
 
   <script src="script.js"></script>
   
